--- a/packages/website/pages/index.module.less
+++ b/packages/website/pages/index.module.less
@@ -7,7 +7,7 @@
     width: 100%;
     padding: 5vh 0 10vh 0;
     text-align: center;
-    font-size: 3em;
+    font-size: 3.25em;
     color: @primary-color;
   }
 
@@ -17,6 +17,7 @@
     align-items: center;
     flex-grow: 1;
     font-size: 1.25em;
+    font-weight: bolder;
     width: 100%;
 
     & > span {
@@ -45,65 +46,13 @@
       justify-content: center;
       flex-wrap: wrap;
       flex-grow: 1;
-      max-width: 80%;
+      max-width: 90%;
       margin-bottom: 5vh;
+      font-weight: normal;
 
       .card {
-        width: 200px;
-        height: 200px;
         margin: 10px;
-        cursor: pointer;
-
-        .stats {
-          .ant-statistic-content {
-            font-size: 0.9em;
-            color: @text-color-secondary;
-            text-align: center;
-          }
-        }
-
-        .ant-card {
-          margin: 0px;
-        }
-
-        .views {
-          display: flex;
-          justify-content: center;
-          align-content: center;
-          padding-top: 15px;
-        }
-
-        .ant-card-meta-title {
-          color: @text-color;
-          font-weight: bolder;
-        }
-
-        .ant-card-body {
-          padding: 15px;
-        }
-
-        .ant-card-meta-title {
-          font-size: 0.85rem;
-          line-height: 1.5rem;
-          padding-bottom: 10px;
-        }
-
-        .ant-avatar {
-          width: 24px;
-          height: 24px;
-        }
-
-        .ant-divider {
-          margin: 5px 0;
-        }
-
-        .plot {
-          margin-left: -30px;
-        }
-
-        .languagesPlot {
-          margin-left: -30px;
-        }
+        text-overflow: clip;
       }
     }
   }
