--- a/packages/website/pages/explorer.module.less
+++ b/packages/website/pages/explorer.module.less
@@ -4,6 +4,7 @@
   background-color: rgba(255, 255, 255, 0.9);
 
   .header {
+    max-height: 65px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -13,6 +14,10 @@
 
     .select {
       width: 300px;
+    }
+
+    .statistic {
+      max-width: 150px;
     }
 
     .ant-statistic-title {
