--- a/packages/website/components/BetaBadge.module.less
+++ b/packages/website/components/BetaBadge.module.less
@@ -1,6 +1,4 @@
-.beta {
-  position: absolute;
-  top: 0;
+span.gittrends-beta-badge {
   color: white;
   font-weight: bolder;
   font-size: 1.5em;
@@ -8,6 +6,6 @@
   padding: 10px 75px;
   transform: rotate(-45deg);
   z-index: 999;
-  margin: 5px -70px;
+  margin: -65px -95px;
   border: 1px solid white;
 }
