--- a/packages/website/components/NavigationBar.module.less
+++ b/packages/website/components/NavigationBar.module.less
@@ -1,15 +1,14 @@
-.navigation-bar {
+.gittrends-navigation-bar {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100%;
+  min-width: 100%;
   background-color: @primary-color;
   box-shadow: 2px 0 2px 0 #888888;
-  position: sticky;
-  top: 0;
 
   header {
     padding: 2.5em 0;
+    margin-top: 10vh;
   }
 
   section.menu {
