--- a/packages/website/layouts/DefaultLayout.module.less
+++ b/packages/website/layouts/DefaultLayout.module.less
@@ -1,10 +1,26 @@
-.defaultLayout {
-  & > .ant-layout {
-    background-color: rgba(255, 255, 255, 0.9);
+section.default-layout {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  min-height: 100%;
 
-    & > .ant-layout-footer {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding-bottom: 0px;
+  & > .navigation-bar {
+    min-width: 225px;
+    max-width: 225px;
+    width: 225px;
+    position: absolute;
+    top: 0;
+    z-index: 999;
+  }
+
+  & > .main-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-left: 225px;
+
+    & > .main-container-content {
+      flex-grow: 1;
     }
   }
 }
