--- a/packages/website/pages/explorer/index.module.less
+++ b/packages/website/pages/explorer/index.module.less
@@ -1,16 +1,22 @@
+@import '../../styles/less/antd-custom.less';
+
 .explorer {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
+  min-height: 100%;
 
   .header {
+    min-height: 65px;
     max-height: 65px;
+    margin-right: 1em;
+    padding: 0 25px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 0 5px #aaaaaa;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
 
     .select {
       width: 300px;
@@ -44,17 +50,18 @@
     justify-content: center;
     margin: 5vw 5vw 0 5vw;
 
-    .card {
+    & > .card {
       margin: 15px;
     }
   }
 
   .footer {
+    height: 125px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 1);
+    align-items: center;
 
     button {
       .icon {
