--- a/packages/website/styles/less/antd-custom.less
+++ b/packages/website/styles/less/antd-custom.less
@@ -1,13 +1,13 @@
-@primary-color: rgba(104, 178, 177, 0.85);
-@secondary-color: rgba(80, 80, 80, 0.9);
-@link-color: rgba(104, 178, 177, 0.85);
+@primary-color: rgb(104, 178, 177);
+@secondary-color: rgba(80, 80, 80);
+@link-color: rgb(104, 178, 177);
 // @success-color: #52c41a; // success state color
 // @warning-color: #faad14; // warning state color
 // @error-color: #f5222d; // error state color
 // @font-size-base: 14px; // major text font size
 // @heading-color: rgba(0, 0, 0, 0.85); // heading text color
-@text-color: rgba(90, 90, 90, 0.8); // major text color
-@text-color-secondary: rgba(90, 90, 90, 0.65); // secondary text color
+@text-color: rgb(90, 90, 90); // major text color
+@text-color-secondary: rgb(90, 90, 90); // secondary text color
 // @disabled-color: rgba(0, 0, 0, 0.25); // disable state color
 // @border-radius-base: 4px; // major border radius
 // @border-color-base: #d9d9d9; // major border color
