--- a/packages/website/pages/index.module.less
+++ b/packages/website/pages/index.module.less
@@ -1,6 +1,6 @@
 @import '../styles/less/antd-custom.less';
 
-.content {
+.github-index-page {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
