--- a/packages/website/styles/less/components.less
+++ b/packages/website/styles/less/components.less
@@ -5,3 +5,6 @@
 @import '../../components/DonateAlert.module.less';
 @import '../../components/RepositoryCard.module.less';
 @import '../../components/UnderConstruction.module.less';
+
+@import '../../components/explorer/divider.module.less';
+@import '../../components/explorer/popularity-section.module.less';
