--- a/packages/website/components/MadeWithLove.module.less
+++ b/packages/website/components/MadeWithLove.module.less
@@ -1,17 +1,18 @@
 .gittrends-love {
-  display: flex;
-  flex-grow: 1;
-  justify-content: center;
+  width: 100%;
   height: 20px;
   line-height: 14px;
   font-size: 14px;
+  text-align: center;
 
-  .heart {
-    color: @primary-color;
-    margin: 0 5px;
-  }
+  & > span {
+    .heart {
+      color: @primary-color;
+      margin: 0 5px;
+    }
 
-  a {
-    padding-left: 5px;
+    a {
+      padding-left: 5px;
+    }
   }
 }
