--- a/packages/website/pages/explorer/[...params].module.less
+++ b/packages/website/pages/explorer/[...params].module.less
@@ -1,10 +1,16 @@
 @import '../../styles/less/antd-custom.less';
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .project-explorer {
-  min-height: 100%;
-  width: 90%;
+  min-height: 200%;
+  width: 95%;
   margin: auto;
   margin-top: 15px;
+  overflow-y: auto;
+  scroll-behavior: smooth;
 
   header {
     display: flex;
@@ -19,48 +25,54 @@
     }
   }
 
-  section.title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  & > .content {
+    width: 75%;
     margin: auto;
-    margin-top: 10px;
-    text-align: center;
 
-    div {
-      font-size: 1.75em;
-      font-weight: bolder;
-      color: @primary-color;
-      padding-bottom: 10px;
-      .ant-avatar {
-        margin-right: 15px;
-      }
-    }
-  }
-
-  section.overview {
-    width: 80%;
-    margin: auto;
-    padding-top: 50px;
-
-    .ant-descriptions-item-label,
-    .ant-descriptions-item-content {
-      padding: 0.5em 1em;
+    & > .divider {
+      margin-top: 2.5em;
+      margin-bottom: 2em;
     }
 
-    .ant-descriptions-item-label {
-      font-weight: bolder;
-      color: @secondary-color;
-      .icon {
+    & > .title {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: auto;
+      margin-top: 10px;
+      text-align: center;
+
+      div {
+        font-size: 1.75em;
+        font-weight: bolder;
         color: @primary-color;
-        margin-right: 5px;
+        padding-bottom: 10px;
+        .ant-avatar {
+          margin-right: 15px;
+        }
       }
     }
-  }
 
-  section.popularity {
-    display: flex;
-    justify-content: center;
-    margin: 50px 0;
+    & > .overview {
+      .ant-descriptions-item-label,
+      .ant-descriptions-item-content {
+        padding: 0.5em 1em;
+      }
+
+      .ant-descriptions-item-label {
+        font-weight: bolder;
+        color: @secondary-color;
+        .icon {
+          color: @primary-color;
+          margin-right: 5px;
+        }
+      }
+    }
+
+    & > .popularity {
+      display: flex;
+      justify-content: center;
+      margin: 50px 0;
+    }
   }
 }
