--- a/packages/website/layouts/DefaultLayout.module.less
+++ b/packages/website/layouts/DefaultLayout.module.less
@@ -17,5 +17,9 @@ section.default-layout {
     flex-grow: 1;
     overflow-y: auto;
     scroll-behavior: smooth;
+
+    & > .main-container-footer {
+      margin-top: 40px;
+    }
   }
 }
