--- a/packages/website/pages/about/index.module.less
+++ b/packages/website/pages/about/index.module.less
@@ -6,7 +6,7 @@
 
   .picture {
     text-align: center;
-    padding-top: 25px;
+    padding-top: 40px;
   }
 
   .description {
@@ -19,13 +19,15 @@
 
   #references {
     .reference {
-      margin-bottom: 15px;
       .pdf {
         color: red;
         padding-right: 10px;
       }
       .title {
         font-weight: bolder;
+      }
+      span {
+        padding-right: 0.5em;
       }
     }
   }
