--- a/packages/website/pages/explorer/[owner]/[name].module.less
+++ b/packages/website/pages/explorer/[owner]/[name].module.less
@@ -1,4 +1,6 @@
-@import '../../styles/less/antd-custom.less';
+@import '../../../styles/less/antd-custom.less';
+@import '../../../components/explorer/divider.module.less';
+@import '../../../components/explorer/popularity-section.module.less';
 
 .overflow-hidden {
   overflow: hidden;
@@ -59,7 +61,6 @@
 
       .topics .topic {
         margin-top: 10px;
-        margin-bottom: 5px;
       }
     }
 
@@ -85,8 +86,4 @@
       margin: 50px 0;
     }
   }
-}
-
-#project-explorer footer {
-  margin-top: 50px;
 }
