--- a/packages/website/styles/less/antd-custom.less
+++ b/packages/website/styles/less/antd-custom.less
@@ -1,6 +1,6 @@
 @primary-color: rgb(104, 178, 177);
 @secondary-color: rgba(80, 80, 80);
-@link-color: rgb(104, 178, 177);
+@link-color: @primary-color;
 // @success-color: #52c41a; // success state color
 // @warning-color: #faad14; // warning state color
 // @error-color: #f5222d; // error state color
@@ -10,5 +10,5 @@
 @text-color-secondary: rgb(90, 90, 90); // secondary text color
 // @disabled-color: rgba(0, 0, 0, 0.25); // disable state color
 // @border-radius-base: 4px; // major border radius
-// @border-color-base: #d9d9d9; // major border color
+@border-color-base: @primary-color; // major border color
 // @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
