--- a/packages/website/components/DonateAlert.module.less
+++ b/packages/website/components/DonateAlert.module.less
@@ -1,7 +1,5 @@
 .gittrends-donate {
-  position: absolute;
-  top: 0;
-  height: 30px;
+  line-height: 2em;
   width: 100%;
   background-color: #505050;
   display: flex;
@@ -9,16 +7,19 @@
   align-items: center;
   justify-content: center;
   font-weight: bolder;
-  color: white;
+  color: white !important;
 
-  .icon {
-    padding: 0 10px;
+  & > a {
+    color: white !important;
+    .bullhorn {
+      margin-right: 10px;
+    }
   }
 
-  .close {
+  & > .close {
     position: absolute;
     right: 0;
-    padding: 0 5px;
-    margin: 0 5px;
+    margin-right: 20px;
+    cursor: pointer;
   }
 }
