--- a/packages/website/pages/explorer/[owner]/[name].module.less
+++ b/packages/website/pages/explorer/[owner]/[name].module.less
@@ -2,49 +2,32 @@
 @import '../../../components/explorer/divider.module.less';
 @import '../../../components/explorer/popularity-section.module.less';
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .project-explorer {
   width: 95%;
   margin: auto;
-  margin-top: 15px;
 
-  header {
+  & > header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: absolute;
-    width: calc(100vw - 315px);
+    margin-top: 15px;
 
-    .breadcrumb {
-      font-size: 1em;
-      .icon {
-        margin-right: 5px;
-      }
-
-      &.hidden {
-        visibility: hidden;
-      }
+    .breadcrumb .icon {
+      margin-right: 5px;
     }
   }
 
-  & > .content {
+  & > section {
     width: 75%;
     margin: auto;
-    margin-top: 75px;
 
     & > .divider {
       margin-top: 2em;
-      margin-bottom: 2em;
+      margin-bottom: 1.5em;
       font-size: 1.75em;
     }
 
     & > .title {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       margin: auto;
       margin-top: -15px;
       text-align: center;
@@ -57,6 +40,11 @@
         .ant-avatar {
           margin-right: 15px;
         }
+      }
+
+      .description,
+      .topics {
+        display: block;
       }
 
       .topics .topic {
