--- a/packages/website/components/BetaBadge.module.less
+++ b/packages/website/components/BetaBadge.module.less
@@ -1,11 +1,19 @@
-span.gittrends-beta-badge {
+.gittrends-beta-badge {
   color: white;
   font-weight: bolder;
   font-size: 1.5em;
   background-color: #505050;
   padding: 10px 75px;
   transform: rotate(-45deg);
-  z-index: 999;
+  z-index: 1;
   margin: -65px -95px;
   border: 1px solid white;
+}
+
+@media (max-width: 575.98px) {
+  .gittrends-beta-badge {
+    font-size: 1em;
+    padding: 5px 50px;
+    margin: -150px -110px;
+  }
 }
