--- a/packages/website/components/Logo.module.less
+++ b/packages/website/components/Logo.module.less
@@ -10,3 +10,17 @@
     font-weight: bolder;
   }
 }
+
+@media (max-width: 575.98px) {
+  .gittrends-logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: auto;
+
+    img {
+      height: 3em;
+      margin-right: 10px;
+    }
+  }
+}
