--- a/packages/website/pages/index.module.less
+++ b/packages/website/pages/index.module.less
@@ -61,3 +61,49 @@
     }
   }
 }
+
+@media (max-width: 575.98px) {
+  .github-index-page {
+    & > header {
+      margin: 10vh 0 5vh 0;
+      padding: 0px;
+      font-size: 2em;
+    }
+
+    & > section {
+      .search-box {
+        width: 90%;
+      }
+
+      .project-samples {
+        grid-template-columns: repeat(2, 175px);
+        grid-template-rows: auto;
+        justify-content: center;
+        gap: 5px;
+        width: 95%;
+        padding: 0px;
+      }
+
+      .db-statistics {
+        padding: 25px;
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        grid-template-rows: auto;
+
+        .db-stats {
+          .ant-statistic-title {
+            display: none;
+          }
+
+          .ant-statistic-content-value {
+            font-size: 0.75em;
+          }
+
+          .ant-statistic-content-prefix {
+            font-size: 0.75em;
+          }
+        }
+      }
+    }
+  }
+}
