--- a/packages/website/pages/index.module.less
+++ b/packages/website/pages/index.module.less
@@ -65,9 +65,10 @@
 @media (max-width: 575.98px) {
   .github-index-page {
     & > header {
-      margin: 10vh 0 5vh 0;
+      width: 95vw;
+      margin: 10vh auto 5vh auto;
       padding: 0px;
-      font-size: 2em;
+      font-size: 2.5em;
     }
 
     & > section {
