--- a/packages/website/components/explorer/divider.module.less
+++ b/packages/website/components/explorer/divider.module.less
@@ -23,3 +23,16 @@
     padding: 0 0.5em;
   }
 }
+
+@media (max-width: 575.98px) {
+  .gittrends-section-divider {
+    .line {
+      max-width: auto;
+      height: 0em;
+    }
+
+    .title {
+      margin: auto 15px;
+    }
+  }
+}
