--- a/packages/website/pages/index.module.less
+++ b/packages/website/pages/index.module.less
@@ -66,12 +66,14 @@
   .github-index-page {
     & > header {
       width: 95vw;
-      margin: 10vh auto 5vh auto;
+      margin: 5vh auto;
       padding: 0px;
       font-size: 2.5em;
     }
 
     & > section {
+      font-size: 1.15em;
+
       .search-box {
         width: 90%;
       }
