--- a/packages/website/layouts/DefaultLayout.module.less
+++ b/packages/website/layouts/DefaultLayout.module.less
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 225px auto;
   grid-template-rows: auto;
-  overflow: hidden;
+  overflow-y: hidden;
 
   & > .main-container {
     display: flex;
@@ -26,8 +26,11 @@
 @media (max-width: 575.98px) {
   .default-layout {
     grid-template-columns: auto;
-    grid-template-rows: 40px auto;
-    min-height: 100vh;
+    grid-template-rows: 65px auto;
     height: auto;
+
+    & > .main-container {
+      min-height: auto;
+    }
   }
 }
