--- a/packages/website/components/Logo.module.less
+++ b/packages/website/components/Logo.module.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2em 0;
+  margin-top: 95px;
 
   span {
     font-size: 2em;
