--- a/packages/website/components/NavigationBar.module.less
+++ b/packages/website/components/NavigationBar.module.less
@@ -7,8 +7,8 @@
   box-shadow: 2px 0 2px 0 #888888;
 
   header {
-    padding: 1em 0;
-    margin-top: 10vh;
+    padding: 1em;
+    margin: 3vh 0;
   }
 
   .menu-icon,
