fix cards on popularity section

--- a/packages/website/components/explorer/popularity-section.module.less
+++ b/packages/website/components/explorer/popularity-section.module.less
@@ -9,6 +9,7 @@
 
     .card {
       max-width: 225px;
+      margin-right: 5px;
 
       .card-title {
         a {
@@ -24,6 +25,10 @@
         color: @primary-color;
         font-size: 1.5em;
       }
+    }
+
+    .card:last-child {
+      margin-right: 0px;
     }
   }
 
