fix(website): minor css improvements

--- a/packages/website/components/NavigationBar.module.less
+++ b/packages/website/components/NavigationBar.module.less
@@ -63,10 +63,11 @@
   .gittrends-navigation-bar {
     position: relative;
     height: 65px;
+    font-size: 1.05em;
 
     .badge {
       position: absolute;
-      margin: 5px -40px;
+      margin: 10px -40px;
     }
 
     header {
