--- a/packages/website/pages/index.module.less
+++ b/packages/website/pages/index.module.less
@@ -66,13 +66,17 @@
   .github-index-page {
     & > header {
       width: 95vw;
-      margin: 5vh auto;
+      margin: 3vh auto;
       padding: 0px;
-      font-size: 2.5em;
+      font-size: 2.75em;
     }
 
     & > section {
       font-size: 1.15em;
+
+      & > span {
+        margin: 15px;
+      }
 
       .search-box {
         width: 90%;
