--- a/packages/website/components/explorer/divider.module.less
+++ b/packages/website/components/explorer/divider.module.less
@@ -27,12 +27,13 @@
 @media (max-width: 575.98px) {
   .gittrends-section-divider {
     .line {
-      max-width: auto;
+      max-width: 25%;
       height: 0em;
     }
 
     .title {
       margin: auto 15px;
+      padding: 0 0em;
     }
   }
 }
