--- a/packages/website/components/BetaBadge.module.scss
+++ b/packages/website/components/BetaBadge.module.scss
@@ -1,4 +1,4 @@
-.gittrends-beta-badge {
+.beta-badge {
   color: white;
   font-weight: bolder;
   font-size: 1.25em;
@@ -11,7 +11,7 @@
 }
 
 @media (max-width: 575.98px) {
-  .gittrends-beta-badge {
+  .beta-badge {
     font-size: 1em;
     padding: 5px 50px;
     margin: -150px -110px;
