--- a/packages/website/components/Logo.module.scss
+++ b/packages/website/components/Logo.module.scss
@@ -1,4 +1,4 @@
-.gittrends-logo {
+.logo {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 575.98px) {
-  .gittrends-logo {
+  .logo {
     display: flex;
     flex-direction: row;
     align-items: center;
