--- a/packages/website/components/MadeWithLove.module.scss
+++ b/packages/website/components/MadeWithLove.module.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables.scss';
+
 .gittrends-love {
   width: 100%;
   height: 20px;
@@ -7,7 +9,7 @@
 
   & > span {
     .heart {
-      color: @primary-color;
+      color: $primary-color;
       margin: 0 5px;
     }
 
