--- a/packages/website/components/DonateAlert.module.scss
+++ b/packages/website/components/DonateAlert.module.scss
@@ -1,4 +1,4 @@
-.gittrends-donate {
+.donate {
   line-height: 2em;
   width: 100%;
   background-color: #505050;
@@ -25,7 +25,7 @@
 }
 
 @media (max-width: 575.98px) {
-  .gittrends-donate {
+  .donate {
     display: none;
   }
 }
