--- a/packages/website/components/RepositoryCard.module.scss
+++ b/packages/website/components/RepositoryCard.module.scss
@@ -1,13 +1,16 @@
-@import '../styles/variables.scss';
-
 .repository-card {
   width: 225px;
-  height: 200px;
+  height: 225px;
   cursor: pointer;
+  border: 1px solid rgb(240, 240, 240);
 
   .card-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     font-weight: bolder;
     padding: 8px 16px;
+    max-height: 2.5em;
 
     .card-header-avatar {
       width: 24px;
@@ -15,9 +18,15 @@
     }
 
     .card-header-title {
-      color: $text-color;
-      font-weight: bolder;
+      color: var(--text-color);
       text-align: left;
+      font-size: 0.9em;
+      margin-left: 10px;
+      hyphens: auto;
+      max-height: 1.5em;
+      overflow: hidden;
+      white-space: pre-line;
+      overflow-wrap: anywhere;
     }
   }
 
@@ -26,13 +35,15 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    color: $text-color;
-    font-size: 0.8rem;
-    color: $text-color-secondary;
-    padding: 8px 16px;
+    font-size: 0.8em;
+    color: var(--text-color-secondary);
+    padding: 4px 16px;
+    margin: 4px 0;
+    border-top: 1px solid rgb(240, 240, 240);
+    border-bottom: 1px solid rgb(240, 240, 240);
 
     .stat-icon {
-      color: $primary-color;
+      color: var(--primary-color);
       margin-right: 5px;
     }
   }
@@ -42,61 +53,38 @@
     justify-content: center;
     align-content: center;
     padding: 5px;
-    color: $text-color;
+    color: var(--text-color);
     font-size: 0.8rem;
     padding: 8px 16px;
 
     .description {
       max-height: 125px;
       overflow: hidden;
+      white-space: pre-line;
+      overflow-wrap: anywhere;
+      overflow-y: hidden;
     }
 
-    .extra {
-      height: 0px;
-      opacity: 0;
-      margin: auto;
-
-      .not-available {
-        font-size: 0.9em;
-        .ant-empty-image {
-          height: 75px;
-        }
-      }
+    .plot {
+      padding-top: 5px;
     }
-  }
-
-  .views.has-extra {
-    &:hover {
-      .description {
-        height: 0px;
-        width: 0px;
-        opacity: 0;
-      }
-      .extra {
-        height: 100%;
-        opacity: 1;
-        transition: none;
-      }
-    }
-  }
-
-  .ant-card-body {
-    padding: 15px;
-  }
-
-  .ant-divider {
-    margin: 5px 0;
   }
 }
 
 @media (max-width: 575.98px) {
   .repository-card {
-    height: 185px;
+    width: auto;
+    height: auto;
+
+    .stats {
+      font-size: 0.7em;
+      color: var(--text-color-secondary);
+      padding: 4px;
+      margin: 0;
+    }
 
     .views {
-      .description {
-        text-overflow: clip;
-      }
+      display: none;
     }
   }
 }
