--- a/packages/website/components/explorer/overview-section.module.scss
+++ b/packages/website/components/explorer/overview-section.module.scss
@@ -5,7 +5,7 @@
 
   & .cell {
     text-align: center;
-    margin: 10px 25px;
+    margin: 5px 20px;
 
     .title {
       color: var(--primary-color);
@@ -14,5 +14,11 @@
       padding-bottom: 2px;
       padding: 0 5px;
     }
+  }
+}
+
+@media (max-width: 575.98px) {
+  .table .cell {
+    margin: 5px 5px;
   }
 }
