--- a/packages/website/pages/about/index.module.scss
+++ b/packages/website/pages/about/index.module.scss
@@ -1,19 +1,25 @@
-@import '../../styles/variables.scss';
-
 .about {
   width: 100%;
-  margin-bottom: 10vh;
+  margin-bottom: 5vh;
 
-  .picture {
-    text-align: center;
-    padding-top: 40px;
-  }
+  .maintainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-  .description {
-    text-align: center;
-    padding-top: 15px;
-    span {
-      display: block;
+    & > .picture {
+      height: 150px;
+      width: fit-content;
+    }
+
+    & > .description {
+      text-align: center;
+      font-size: 0.85em;
+      padding-top: 15px;
+      span {
+        display: block;
+      }
     }
   }
 
@@ -35,16 +41,33 @@
   }
 
   article {
-    width: 80%;
+    width: 75%;
     margin: auto;
-    font-size: 1.1em;
     text-align: justify;
+    margin: 2em auto;
 
-    h1 {
-      color: $primary-color;
-      border-bottom: 1px solid;
+    h2 {
+      color: var(--primary-color);
       font-size: 1.5em;
-      padding-top: 25px;
+      text-align: center;
+      margin: 25px 0;
+      font-weight: bold;
+    }
+
+    p {
+      margin-bottom: 10px;
+      text-indent: 2em;
+    }
+  }
+}
+
+@media (max-width: 575.98px) {
+  .about article {
+    width: 85%;
+
+    p {
+      margin-bottom: 10px;
+      text-indent: 1em;
     }
   }
 }
