--- a/packages/website/pages/authorization/index.module.scss
+++ b/packages/website/pages/authorization/index.module.scss
@@ -1,19 +1,17 @@
-@import '../../styles/less/antd-custom.less';
-
-.gittrends-authorization {
+.authorization {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 5vh;
 
   header {
-    color: @primary-color;
+    color: var(--primary-color);
     font-size: 3em;
     font-weight: bolder;
   }
 
   section {
-    color: @text-color;
+    color: var(--text-color);
     width: 60%;
     text-align: center;
   }
@@ -28,7 +26,7 @@
     font-size: 2.5em;
 
     & > .smile {
-      color: @primary-color;
+      color: var(--primary-color);
       font-size: 1.25em;
     }
 
@@ -38,7 +36,7 @@
   }
 
   a {
-    background-color: @primary-color;
+    background-color: var(--primary-color);
     color: white;
     text-align: center;
     font-size: 1.75em;
@@ -55,6 +53,34 @@
 
     img {
       max-height: 50vh;
+    }
+  }
+}
+
+@media (max-width: 575.98px) {
+  .authorization {
+    header {
+      font-size: 2em;
+      text-align: center;
+    }
+
+    section {
+      width: 80%;
+
+      &.main-text,
+      &.feedback-text {
+        font-size: 1.1em;
+        margin-top: 5vh;
+      }
+
+      &.feedback-text {
+        font-size: 1.5em;
+      }
+    }
+
+    footer > img {
+      max-height: 25vh;
+      opacity: 50%;
     }
   }
 }
