--- a/packages/website/pages/explorer/index.module.scss
+++ b/packages/website/pages/explorer/index.module.scss
@@ -1,5 +1,3 @@
-@import '../../styles/variables.scss';
-
 .explorer-page {
   display: flex;
   flex-direction: column;
@@ -12,7 +10,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 0 5px #aaaaaa;
+    box-shadow: 0 0 5px rgb(240, 240, 240);
     position: sticky;
     top: 0;
     z-index: 1;
@@ -38,8 +36,8 @@
   }
 
   .content {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
     justify-content: center;
     gap: 15px;
     margin: 5vw 5vw 0 5vw;
@@ -83,6 +81,7 @@
     }
 
     .content {
+      grid-template-columns: repeat(2, auto);
       gap: 10px;
       margin: 25px 5px;
 
